# vyvchai

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  DOCKER_README.md  Dockerfile  Dockerfile.fast  README.md  build_fast.bat  build_fast.sh  create_dummy_data.py  docker-compose.dev.yml  docker-compose.fast.yml  docker-compose.yml  main.py  mypy.ini  pyproject.toml  run_agent_test.py  test_agent.py  user_guide_docker.md
.github/workflows/: ci.yml  dependabot.yml  docker-build.yml  labeler.yml  lint.yml  pr-checks.yml  security.yml  test.yml
alembic/: env.py
alembic/versions/: 1636e918583a_refactor_relations.py  824dd036de4a_initial_migration.py
src/: __init__.py
src/agent/: __init__.py  graph.py  qa_agent.py  supervisor.py
src/agent/nodes/: content_generation.py  router.py
src/agent/prompts/: content_prompts.py  grader_prompts.py  solver_prompts.py  supervisor_prompts.py
src/agent/specialist_agents/: __init__.py  analyst_specialist.py  content_specialist.py  grader_specialist.py  solver_specialist.py
src/agent/tools/: __init__.py  analytics_tool.py  rag_tool.py  solver_tool.py  validator_tool.py
src/app/: agent.py  dal.py  data_loader.py  lapa_config.py  learner_modeling.py  main.py  rag_node.py  schemas.py  settings.py  solver_validator_node.py  topic_router_node.py  tutor_generation_node.py  vector_store.py
src/app/models/: metric.py  models_db.py
src/core/: config.py  telemetry_config.py
src/db/: session.py
src/db/models/: quiz.py  student.py
src/llm/: __init__.py  cache.py  fallback.py  lapa_client.py  lapa_manager.py  openai_client.py  router.py
src/schemas/: agent_state.py  quiz_schema.py
src/services/: metrics_service.py
src/utils/: __init__.py
src/vyvchai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+5 files in other folders)
