[project]
name = "vyvchai"
version = "0.1.0"
description = "VyvchAI | Mriia Track AI Tutor for Lapathon 2026"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  # Core
  "fastapi",
  "langgraph",
  "langchain",
  "polars",
  "qdrant-client",
  # ML
  "transformers",
  "torch",
  "sympy",
  "pyparsing>=3.3.1",
  "sqlalchemy>=2.0.45",
  "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
  "mypy",
  "pre-commit"
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B"]
