[project]
name = "vyvchai"
version = "0.1.0"
description = "VyvchAI | Mriia Track AI Tutor for Lapathon 2026"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # Core
  "fastapi",
  "langgraph",
  "langchain",
  "polars",
  "qdrant-client",
  # ML
  "transformers",
  "torch",
  "sympy",
  "pyparsing>=3.3.1",
  "sqlalchemy>=2.0.45",
  "pydantic-settings>=2.12.0",
  "structlog>=25.5.0",
  "arize-phoenix>=12.29.0",
  "opentelemetry-api>=1.39.1",
  "phoenix>=0.9.1",
  "openinference-instrumentation-langchain>=0.1.58",
  "opentelemetry-exporter-prometheus>=0.60b1",
  "opentelemetry-instrumentation-fastapi>=0.60b1",
  "opentelemetry-instrumentation-sqlalchemy>=0.60b1",
  # LLM dependencies
  "httpx",
  "tenacity",
  "openai",
  "redis",
  "psycopg2-binary",
  "asyncpg",

  "uvicorn",
  "langchain-google-genai",
  "langchain-openai",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
  "mypy",
  "pre-commit"
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B"]
